# stk-editor

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  command.cpp  command.hpp  editor.cpp  editor.hpp  entity.cpp  entity.hpp  entitymanager.cpp  entitymanager.hpp  indicator.cpp  main.cpp  mouse.cpp  mouse.hpp  rxgd.diff  structs.hpp  terrainshader.ps  todo.txt  toolbar.cpp  toolbar.hpp  toolbox.cpp  toolbox.hpp  track.cpp  track.hpp
cmake/: FindIrrlicht.cmake  Toolchain-mingw.cmake
commands/: commandhandler.cpp  commandhandler.hpp  heightmodcmd.cpp  heightmodcmd.hpp  icommand.hpp  iocommand.cpp  iocommand.hpp  itcommand.cpp  itcommand.hpp  rccommand.hpp  roadcommand.cpp  roadcommand.hpp  texmodcmd.cpp  texmodcmd.hpp
entities/: entitymanager.cpp  entitymanager.hpp  terrain.cpp  terrain.hpp
font/: font.xml
img/: indicator.b3d
input/: keys.hpp  mouse.cpp  mouse.hpp
lib/irrlicht/: CMakeLists.txt
lib/irrlicht/include/: IrrCompileConfig.h  SViewFrustum.h
lib/irrlicht/source/Irrlicht/: C3DSMeshFileLoader.d  CAnimatedMeshHalfLife.d  CAnimatedMeshMD2.d  CAnimatedMeshMD3.d  CAnimatedMeshSceneNode.d  CAttributes.d  CB3DMeshFileLoader.d  CBSPMeshFileLoader.d  CBillboardSceneNode.d  CBoneSceneNode.d  CBurningShader_Raster_Reference.d  CCSMLoader.d  CCameraSceneNode.d  CColladaFileLoader.d  CColladaMeshWriter.d  CColorConverter.d  CCubeSceneNode.d  CD3D8Driver.d  CD3D8NormalMapRenderer.d  CD3D8ParallaxMapRenderer.d  CD3D8ShaderMaterialRenderer.d  CD3D8Texture.d  CD3D9Driver.d  CD3D9HLSLMaterialRenderer.d  CD3D9NormalMapRenderer.d  CD3D9ParallaxMapRenderer.d  CD3D9ShaderMaterialRenderer.d  CD3D9Texture.d  CDMFLoader.d  CDefaultGUIElementFactory.d  CDefaultSceneNodeAnimatorFactory.d  CDefaultSceneNodeFactory.d  CDepthBuffer.d  CDummyTransformationSceneNode.d  CEmptySceneNode.d  CFPSCounter.d  CFileList.d  CFileSystem.d  CGUIButton.d  CGUICheckBox.d  (+182 more)
lib/irrlicht/source/Irrlicht/aesGladman/: aescrypt.d  aeskey.d  aestab.d  fileenc.d  hmac.d  prng.d  pwd2key.d  sha1.d  sha2.d
lib/irrlicht/source/Irrlicht/bzip2/: blocksort.d  bzcompress.d  bzlib.d  crctable.d  decompress.d  huffman.d  randtable.d
lib/irrlicht/source/Irrlicht/jpeglib/: jaricom.d  jcapimin.d  jcapistd.d  jcarith.d  jccoefct.d  jccolor.d  jcdctmgr.d  jchuff.d  jcinit.d  jcmainct.d  jcmarker.d  jcmaster.d  jcomapi.d  jcparam.d  jcprepct.d  jcsample.d  jctrans.d  jdapimin.d  jdapistd.d  jdarith.d  jdatadst.d  jdatasrc.d  jdcoefct.d  jdcolor.d  jddctmgr.d  jdhuff.d  jdinput.d  jdmainct.d  jdmarker.d  jdmaster.d  jdmerge.d  jdpostct.d  jdsample.d  jdtrans.d  jerror.d  jfdctflt.d  jfdctfst.d  jfdctint.d  jidctflt.d  jidctfst.d  (+6 more)
lib/irrlicht/source/Irrlicht/libpng/: png.d  pngerror.d  pngget.d  pngmem.d  pngpread.d  pngread.d  pngrio.d  pngrtran.d  pngrutil.d  pngset.d  pngtrans.d  pngwio.d  pngwrite.d  pngwtran.d  pngwutil.d
lib/irrlicht/source/Irrlicht/lzma/: LzmaDec.d
lib/irrlicht/source/Irrlicht/zlib/: adler32.d  compress.d  crc32.d  deflate.d  inffast.d  inflate.d  inftrees.d  trees.d  uncompr.d  zutil.d
lib/physfs/: CMakeLists.txt
lib/zlib/: CMakeLists.txt
libraries/env/model/: horse.b3d
libraries/env/xml/: c1 - Copy - Copy - Copy (2).xml  c2 - Copy - Copy (2) - Copy.xml  c3 - Copy - Copy.xml  h1 - Copy.xml  v1 - Copy - Copy (3).xml  v2 - Copy (4).xml
road/: bezier.cpp  bezier.hpp  driveline.cpp  driveline.hpp  iroad.cpp  iroad.hpp  ispline.cpp  ispline.hpp  road.cpp  road.hpp  tcr.cpp  tcr.hpp
src/: autodropped.hpp  editor.cpp  editor.hpp  icon_rc.template  main.cpp  terrainshader.vs  track.cpp  track.hpp
src/b3d/: B3DMeshWriter.cpp  B3DMeshWriter.h  SB3DStructs.h
src/commands/: cl_cmd.hpp  command_handler.cpp  command_handler.hpp  create_road_cmd.hpp  height_mod_cmd.cpp  height_mod_cmd.hpp  icmd.hpp  iobject_cmd.cpp  iobject_cmd.hpp  iterrain_cmd.hpp  rcs_cmd.hpp  road_cmd.cpp  road_cmd.hpp  texmod_cmd.cpp  texmod_cmd.hpp
src/gui/: element.cpp  env_panel.cpp  env_panel.hpp  extra_panel.cpp  extra_panel.hpp  irr_gui_objects.hpp  isubscriber.hpp  library.cpp  msg_wndw.cpp  msg_wndw.hpp  new_dialog_wndw.cpp  new_dialog_wndw.hpp  road_cross_section_wndw.cpp  road_cross_section_wndw.hpp  road_panel.cpp  road_panel.hpp  simple_gui_objects.hpp  terr_panel.cpp  terr_panel.hpp  tex_sel.cpp  tex_sel.hpp  toolbar.cpp  toolbar.hpp  toolbox.cpp  toolbox.hpp  welcome_screen.cpp  welcome_screen.hpp
src/input/: keys.hpp  mouse.cpp  mouse.hpp
src/mesh/: driveline.cpp  driveline.hpp  iroad.cpp  iroad.hpp  mesh_structs.hpp  road.cpp  road.hpp  shader.hpp  sky.cpp  sky.hpp  terrain.cpp  terrain.hpp
src/spline/: bezier.cpp  bezier.hpp  ispline.cpp  ispline.hpp  tcr.cpp  tcr.hpp
src/spm/: sp_mesh_loader.cpp  sp_mesh_loader.hpp
src/viewport/: aztec_camera.cpp  aztec_camera.hpp  checkline_handler.cpp  checkline_handler.hpp  indicator.cpp  indicator.hpp  selection_handler.cpp  selection_handler.hpp  viewport.cpp  viewport.hpp
toolbox/: element.cpp  element.hpp  envpanel.cpp  envpanel.hpp  library.cpp  library.hpp  roadpanel.cpp  roadpanel.hpp  terrpanel.cpp  terrpanel.hpp  toolbox.cpp  toolbox.hpp
viewport/: aztec_camera.cpp  aztec_camera.hpp  indicator.cpp  indicator.hpp  selection_handler.cpp  selection_handler.hpp  terrain.cpp  terrain.hpp  viewport.cpp  viewport.hpp
vs/lib/: Irrlicht.lib  physfs.lib
vs/stk_editor/: stk_editor.sln  stk_editor.vcxproj  stk_editor.vcxproj.filters
vs/stk_editor/Debug/: vc120.idb
vs/stk_editor/Debug/stk_editor.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  stk_editor.lastbuildstate
